--- a/html/contact.html
+++ b/html/contact.html
@@ -45,17 +45,17 @@
             <div class="shadow-lg p-3 mb-5 mt-5 bg-body-tertiary rounded "><h3>Контакты</h3></div>
             <div class="container">
                 <div class="card col-5 p-4 bg-dark-subtle text-emphasis-dark" style="max-width: 30%; max-height: 100%">
-                    <input class="form-control" type="text" placeholder="Name"
+                    <input class="form-control" type="text" placeholder="Имя"
                            aria-label="пример ввода по умолчанию">
                     <div class="input-group mt-5">
                         <span class="input-group-text" id="basic-addon1">@</span>
-                        <input type="text" class="form-control" placeholder="email" aria-label="email"
+                        <input type="text" class="form-control" placeholder="Почта" aria-label="Почта"
                                aria-describedby="basic-addon1">
                         <div class="input-group mt-5" style="height: 100px">
-                            <span class="input-group-text">message</span>
+                            <span class="input-group-text">Сообщение</span>
                             <textarea class="form-control" aria-label="С текстовым полем"></textarea>
                         </div>
-                        <button type="button" class="btn btn-outline-primary mt-5">Primary</button>
+                        <button type="button" class="btn btn-outline-primary mt-5">Отправить</button>
                     </div>
                 </div>
             </div>
